10:30/patrones-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: patrones
spec:
  selector:
    app: patrones
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
